# GenAI-quantum-insight

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: aws.yaml  github-docker-cicd.yaml
.streamlit/: config.toml  credentials.toml  secrets.toml
database/: arxiv_data.db
database/.conversations/: About-Quantum-Physics_2024-10-16-17-09-39.json  Beginners_Guide_2024-10-17-11-04-38.json  Code-Algorithms_2024-10-16-17-21-50.json  Industrial-Applications_2024-10-16-17-33-34.json  Mathematics_2024-10-16-17-29-38.json  Quantum-Computing_2024-10-17-11-45-41.json  Quantum-Discoveries_2024-10-16-17-38-32.json
src/: __init__.py
src/app/: __init__.py  streamlit_app.py
src/app/components/: __init__.py  repo_button.py  utils.py
src/app/features/: __init__.py
src/app/features/arxiv_data_manager/: __init__.py  arxiv_client.py  arxiv_db.py  arxiv_parser.py  search_and_update.py
src/app/features/research_assistant/: __init__.py  document_processing.py  qa_system.py  research_assistant.py  skeleton.py  vector_store_manager.py
src/app/features/research_assistant/checkpoints/: processed_pdfs.pkl
src/app/features/research_assistant/checkpoints/.chromadb/16659d34-30e3-4755-bd0c-8dc75e5a0447/: index_metadata.pickle
src/app/features/research_assistant/processing/: __init__.py  embeddings.py  pdf_loader.py  preprocessing.py  preprocessor.py  store_manager.py  text_processing.py
src/app/features/research_assistant/qa_system/: __init__.py  conversation_saving.py  conversation_ui.py  qa_helper.py  qa_system.py
src/app/features/research_assistant/utilities/: __init__.py  batch_processing.py  cache.py  helper.py
src/app/features/vectors_store/: __init__.py  document_processor.py
src/app/features/visualization/: visualize.py
src/app/layout/: __init__.py  layout0.py  layout1.py  layout2.py  layout3.py  layout4.py  layout5.py  layout6.py
src/features/arxiv_data_manager/: arxiv_client.py  arxiv_db.py  arxiv_parser.py  search_and_update.py
(+1 files in other folders)
