[tool.poetry]
name = "genai-quantum-insight"
version = "0.1.0"
description = ""
authors = ["mriusero <marius.ayrault@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.39.0"
watchdog = "^5.0.3"
black = "^24.10.0"
pylint = "^3.3.1"
openai = "^1.51.2"
langchain = "^0.3.3"
yt-dlp = "^2024.10.7"
pydub = "^0.25.1"
chromadb = "^0.5.12"
pypdf = "^5.0.1"
tiktoken = "^0.8.0"
langchain-community = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
