[tool.poetry]
name = "gen-ai-quantum-insight"
version = "0.1.0"
description = ""
authors = ["mriusero"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
streamlit = "^1.39.0"
watchdog = "^5.0.3"
pandas = "^2.2.3"
black = "^24.10.0"
pylint = "^3.3.1"
environs = "^11.0.0"
langchain-community = "^0.3.2"
huggingface-hub = "^0.25.2"
torch = "2.0.0"
sentence-transformers = "^3.1.1"
langchain-huggingface = "^0.1.0"
boto3 = "^1.35.37"
pypdf = "^5.0.1"
markdown = "^3.7"
tiktoken = "^0.8.0"
spacy = "3.7.2"
fitz = "^0.0.1.dev2"
chromadb = "^0.5.13"
protobuf = "3.20.3"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
datasets = "^3.0.1"
faiss-cpu = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
